# se-toolkit-lab-8

./: .task-notes  REPORT.md  check_scores.py  docker-compose.yml  pyproject.toml
mcp/mcp_lms/: server.py
nanobot/: Dockerfile  config.json  entrypoint.py  pyproject.toml
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
